# Synchronized-Zero-Latency-Engine

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
jni/: Android.mk
